deploy/base/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-mongo
  namespace: mindlet
  labels:
    mindlet.io/workload: notification
    app.kubernetes.io/part-of: mindlet
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
  selector:
    app.kubernetes.io/component: mongo
    mindlet.io/workload: notification
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notification-mongo
  namespace: mindlet
  labels:
    mindlet.io/workload: notification
    app.kubernetes.io/part-of: mindlet
spec:
  serviceName: notification-mongo
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mongo
      mindlet.io/workload: notification
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mongo
        mindlet.io/workload: notification
        app.kubernetes.io/part-of: mindlet
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
