deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: mindlet
  labels:
    app.kubernetes.io/name: notification
    app.kubernetes.io/part-of: mindlet
spec:
  selector:
    app.kubernetes.io/name: notification
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: grpc
      port: 50059
      targetPort: grpc
