deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification
  namespace: mindlet
  labels:
    app.kubernetes.io/name: notification
    app.kubernetes.io/part-of: mindlet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mindlet.localtest.me
      http:
        paths:
          - path: /svc/notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification
                port:
                  number: 3000
